<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8A9CD8ED"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageMessFood"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:adjustViewBounds="true"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectanglewhite" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:elevation="1dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/sign_up"
        android:textColor="#060F20"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageMessFood" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/signUpText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/textviewbackground"
        android:backgroundTint="#FFC9D3"
        android:elevation="7dp"
        android:fontFamily="sans-serif"
        android:hint="@string/full_name"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textAlignment="textStart"
        android:textColorHint="#75040303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpText" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/fullname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/textviewbackground"
        android:backgroundTint="#FFF3AF"
        android:elevation="7dp"
        android:fontFamily="sans-serif"
        android:hint="@string/college_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:textAlignment="textStart"
        android:textColorHint="#75040303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <EditText
        android:id="@+id/regnum"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="30dp"

        android:layout_marginTop="25dp"
        android:background="@drawable/textviewbackground"
        android:backgroundTint="#FFEBC5"
        android:elevation="7dp"
        android:fontFamily="sans-serif"
        android:hint="@string/reg_number"
        android:inputType="none"
        android:paddingHorizontal="20dp"
        android:textAlignment="textStart"
        android:textColorHint="#75040303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/mobile_num"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/regnum"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/textviewbackground"
        android:backgroundTint="#C9F5FF"
        android:elevation="5dp"
        android:fontFamily="sans-serif"
        android:hint="@string/mob_number"
        android:inputType="number"
        android:paddingHorizontal="20dp"
        android:textAlignment="textStart"
        android:textColorHint="#75040303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regnum" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:elevation="7dp"
        android:text="@string/sign_up"
        android:background="@drawable/textviewbackground"
        android:textColor="@color/white"
        android:backgroundTint="#3170E3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_num"
        android:layout_marginTop="45dp"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:clipToOutline="true"
        android:background="@drawable/topcornerround"
        app:layout_constraintBottom_toTopOf="@+id/imageMessFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/college_logo"
        android:elevation="10dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_acc"
        android:layout_marginTop="20dp"
        android:elevation="7dp"
        app:layout_constraintStart_toStartOf="@+id/mobile_num"
        app:layout_constraintTop_toBottomOf="@+id/button4" />


</androidx.constraintlayout.widget.ConstraintLayout>